Added collision between bullets and asteroids

--- a/Source/Spaceship/Spaceship.vcxproj
+++ b/Source/Spaceship/Spaceship.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="Spaceship.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BulletManager.cpp" />
     <ClCompile Include="BulletManagerEvents.cpp" />
     <ClCompile Include="OrdinaryBullet.cpp" />
