--- a/Source/Spaceship/Spaceship.vcxproj.filters
+++ b/Source/Spaceship/Spaceship.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClCompile Include="OrdinaryBullet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
