spaceship params now are geting from config file

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -61,3 +61,10 @@ AnimationTime =  1000
 6 = 57
 7 = 39
 8 = 54
+
+[SpaceshipConfig]
+Position = 450.0f, 450.0f
+Speed = 74, 18
+LifeCount = 3
+HP = 100
+Damage = 25
