initial position and speed for spaceship are getting from config file too

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -63,8 +63,10 @@ AnimationTime =  1000
 8 = 54
 
 [SpaceshipConfig]
-Position = 450.0f, 450.0f
-Speed = 74, 18
+PositionX = 450.0
+PositionY = 450.0
+SpeedX = 0.0
+SpeedY = 15.0
 LifeCount = 3
 HP = 100
 Damage = 25
