spaceship creation in Asteroids and Spaceship was updated

--- a/Source/SpaceshipTest/Config.INI
+++ b/Source/SpaceshipTest/Config.INI
@@ -92,3 +92,14 @@ Height =  154
 FrameCount =  8
 
 AnimationTime =  1000
+
+
+
+[SpaceshipConfig]
+PositionX = 450.0
+PositionY = 450.0
+SpeedX = 0.0
+SpeedY = 15.0
+LifeCount = 3
+HP = 100
+Damage = 25
