--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -11,6 +11,7 @@ smallasteroid =  Resources\graphics\smallasteroid.png
 bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
+bulletBig = Resources\graphics\bulletBig.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
