Added shooting sounds

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -1,6 +1,6 @@
 [AudioResource]
-piupiu =  Resources\audio\piupiu.wav
-booom =  Resources\audio\booom.wav
+shoot =  Resources\audio\shoot.wav
+rocket =  Resources\audio\shoot2.wav
 
 [PictureResource]
 asteroid =  Resources\graphics\aster.bmp
