fixed playfab lib, dll, liderboard project

--- a/Source/LeaderboardTest/LeaderboardTest.vcxproj
+++ b/Source/LeaderboardTest/LeaderboardTest.vcxproj
@@ -118,10 +118,10 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)TEMP;$(SolutionDir)PlayFab\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>cpprest140_2_9.lib;PlayFabSdk2015_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cpprest140d_2_9.lib;PlayFabSdk2015_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy "$(SolutionDir)PlayFab\bin\cpprest140_2_9.dll" "$(OutDir)\*.*" /F /R /Y /I</Command>
+      <Command>xcopy "$(SolutionDir)PlayFab\bin\cpprest140d_2_9.dll" "$(OutDir)\*.*" /F /R /Y /I</Command>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>expand "$(SolutionDir)PlayFab\lib\PlayFabSdk2015_d.cab" "$(SolutionDir)TEMP\PlayFabSdk2015_d.lib" </Command>
