Achievements are now displayed on the screen

--- a/Source/AchievementsTest/AchievementsConfig.INI
+++ b/Source/AchievementsTest/AchievementsConfig.INI
@@ -41,7 +41,7 @@ _idAchievement = 4
 _progressState = 0
 _progressFinishState = 5
 _displayName = Destroy 5 Big Asteroids
-_displayDescriptionName = Destroy 5 Big Asteroids!!!
+_displayDescriptionName = Destroyed 5 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -50,7 +50,7 @@ _idAchievement = 5
 _progressState = 0
 _progressFinishState = 10
 _displayName = Destroy 10 Big Asteroids
-_displayDescriptionName = Destroy 10 Big Asteroids!!!
+_displayDescriptionName = Destroyed 10 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -59,7 +59,7 @@ _idAchievement = 6
 _progressState = 0
 _progressFinishState = 5
 _displayName = Destroy 5 Middle Asteroids
-_displayDescriptionName = Destroy 5 Middle Asteroids!!!
+_displayDescriptionName = Destroyed 5 Middle Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -68,7 +68,7 @@ _idAchievement = 7
 _progressState = 0
 _progressFinishState = 10
 _displayName = Destroy 10 Middle Asteroids
-_displayDescriptionName = Destroy 10 Middle Asteroids!!!
+_displayDescriptionName = Destroyed 10 Middle Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -82,7 +82,7 @@ _idAchievement = 8
 _progressState = 0
 _progressFinishState = 5
 _displayName = destroy 5 Small Asteroids In 10 Seconds
-_displayDescriptionName = destroy 5 Small Asteroids In 10 Seconds!!!
+_displayDescriptionName = Destroyed 5 Small Asteroids In 10 Seconds!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -91,7 +91,7 @@ _idAchievement = 9
 _progressState = 0
 _progressFinishState = 10
 _displayName = destroy 10 Small Asteroids In 20 Seconds
-_displayDescriptionName = destroy 10 Small Asteroids In 20 Seconds!!!
+_displayDescriptionName = Destroyed 10 Small Asteroids In 20 Seconds!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -100,6 +100,6 @@ _idAchievement = 10
 _progressState = 0
 _progressFinishState = 15
 _displayName = destroy 15 Small Asteroids In 30 Seconds
-_displayDescriptionName = destroy 15 Small Asteroids In 30 Seconds!!!
+_displayDescriptionName = Destroyed 15 Small Asteroids In 30 Seconds!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
